--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fuse.js": "^7.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.2.0",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
